# HMS-Embedded-Division

./: .gitignore  .travis.yml  README.md
BridgeApp/: pom.xml
BridgeApp/src/main/java/embedded/BridgeApp/: BridgeAppApplication.java  MongoRepo.java  MongoTestCommandLineRunner.java  NotificationController.java  Test.java
BridgeApp/src/main/java/embedded/BridgeApp/application/: BuzzerControl.java  Element.java  HandleDevice.java  LightsControl.java  LoraClient.java  LoraDownlinkMessage.java  LoraDownloadMessage.java  LoraService.java  LoraTranslator.java  LoraUplinkMessage.java  OperationCode.java  Visitor.java  WebsocketClientEndpoint.java
BridgeApp/src/main/java/embedded/BridgeApp/application/data/: CarbonDioxideData.java  Data.java  HumidityData.java  LightData.java  MovementData.java  SoundData.java  TemperatureData.java
BridgeApp/src/main/java/embedded/BridgeApp/application/websocket/: LoraClient.java  LoraDownlinkMessage.java  LoraTranslator.java  LoraUplinkMessage.java  OperationCode.java
BridgeApp/src/main/java/embedded/BridgeApp/controllers/: AutomaticLightsController.java  BuzzerController.java  WipeDatabaseController.java
BridgeApp/src/main/java/embedded/BridgeApp/persistance/: CarbonDioxideRepository.java  HumidityRepository.java  LightRepository.java  MongoRepository.java  MovementRepository.java  SoundRepository.java  TemperatureData.java  TemperatureRepository.java
BridgeApp/src/main/resources/: application.properties
BridgeApp/src/test/java/embedded/BridgeApp/: BridgeAppApplicationTests.java
BridgeApp/src/test/java/embedded/BridgeApp/application/: LoraTranslatorTest.java
BridgeApp/src/test/java/embedded/BridgeApp/persistance/: MongoRepositoryTest.java  MongoVisitorTest.java
DeviceCode/: CMakeLists.txt  main.c
DeviceCode/FreeRTOS/VIA_FreeRTOS_AVRMEGA/src/: FreeRTOSConfig.h  croutine.c
DeviceCode/SensorDrivers/: Library Readme.txt  hcSr501.h  hih8120.h  iled.h  lora_driver.h  mh_z19.h  serial.h  stdio_driver.h  tsl2591.h
DeviceCode/include/: CarbonHandler.h  DataCollector.h  DataRepository.h  EventReactor.h  LightHandler.h  LoraHelper.h  MovementHandler.h  TempHumidHandler.h  servo.h  stdio_driver.h
DeviceCode/src/: CarbonHandler.c  DataCollector.c  DataRepository.c  EventReactor.c  LightHandler.c  LoraHelper.c  MovementHandler.c  TempHumidHandler.c  servo.c
Diagrams/: BridgeApp.asta  BridgeApp_design.docx  Device.asta  Embedded.asta  ServoDiagram.asta
Documentation/: BridgeApp.docx  BridgeApp_design.docx  EMBEDDED_C_TEST_CASES.xlsx  Embedded_C_Design.docx  LoRaWAN_1hourTEST.docx  Servo_Documentation.docx  Servo_Test_Case.xlsx
